--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
       }
-      /* Ensure sections are visible below the fixed navbar */
       section, [id] {
         scroll-margin-top: 100px;
       }
-      /* Animation for smooth appearance */
       @keyframes fadeIn {
         from { opacity: 0; transform: translateY(10px); }
         to { opacity: 1; transform: translateY(0); }
@@ -65,16 +63,19 @@
         animation: fadeIn 0.8s ease-out forwards;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
-</head>
+    <script type="module" src="./index.tsx"></script>
+  </head>
   <body>
     <div id="root"></div>
   </body>
