feat: Add loading indicator and refine dependencies
Introduces a visual loading indicator for the portfolio application and updates React/ReactDOM versions. Also removes unnecessary frame permission requests from metadata.

--- a/index.html
+++ b/index.html
@@ -62,19 +62,37 @@
       .animate-fadeIn {
         animation: fadeIn 0.8s ease-out forwards;
       }
+      #root:empty::before {
+        content: 'Loading Portfolio...';
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        width: 100vw;
+        font-size: 1.5rem;
+        font-weight: 800;
+        color: #E50914;
+        background: #141414;
+      }
     </style>
     <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom": "https://esm.sh/react-dom@^19.2.3",
-    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
     <script type="module" src="./index.tsx"></script>
+    <script>
+      window.onerror = function(msg, url, lineNo, columnNo, error) {
+        console.error('Portfolio Runtime Error: ', msg, url, lineNo, columnNo, error);
+        return false;
+      };
+    </script>
   </head>
   <body>
     <div id="root"></div>
