--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
       .animate-fadeIn {
         animation: fadeIn 0.8s ease-out forwards;
       }
+      @keyframes scaleUp {
+        from { opacity: 0; transform: scale(0.95); }
+        to { opacity: 1; transform: scale(1); }
+      }
+      .animate-scaleUp {
+        animation: scaleUp 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
       #root:empty::before {
         content: 'Loading Portfolio...';
         display: flex;
