feat: Enhance visual appeal and project presentation
Refines the portfolio's aesthetic with subtle animations, improved transitions, and richer visual elements inspired by Netflix. Introduces a "Case Studies & Top Hits Today" section for projects, visually numbering them to enhance discoverability and impact. Adjusts the hero section's background parallax and gradient for a more immersive experience. Replaces a placeholder video with a more relevant one for a professional context.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         color: #ffffff;
         font-family: 'Poppins', sans-serif;
         overflow-x: hidden;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
       ::-webkit-scrollbar {
         width: 8px;
@@ -39,11 +41,11 @@
         background-color: #E50914;
       }
       .card-hover {
-        transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        transition: transform 0.4s cubic-bezier(0.33, 1, 0.68, 1);
       }
       .card-hover:hover {
-        transform: scale(1.05);
-        z-index: 10;
+        transform: scale(1.08);
+        z-index: 20;
       }
       .no-scrollbar::-webkit-scrollbar {
         display: none;
@@ -56,7 +58,7 @@
         scroll-margin-top: 100px;
       }
       @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(10px); }
+        from { opacity: 0; transform: translateY(20px); }
         to { opacity: 1; transform: translateY(0); }
       }
       .animate-fadeIn {
@@ -69,17 +71,30 @@
       .animate-scaleUp {
         animation: scaleUp 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
       }
+      .netflix-number {
+        -webkit-text-stroke: 4px #444;
+        color: #141414;
+        font-size: 10rem;
+        line-height: 1;
+        font-weight: 900;
+      }
       #root:empty::before {
-        content: 'Loading Portfolio...';
+        content: 'RAUNAK';
         display: flex;
         align-items: center;
         justify-content: center;
         height: 100vh;
         width: 100vw;
-        font-size: 1.5rem;
-        font-weight: 800;
+        font-size: 3rem;
+        letter-spacing: -0.05em;
+        font-weight: 900;
         color: #E50914;
         background: #141414;
+        animation: pulse 2s infinite;
+      }
+      @keyframes pulse {
+        0%, 100% { opacity: 1; }
+        50% { opacity: 0.5; }
       }
     </style>
     <script type="importmap">
@@ -94,12 +109,6 @@
 }
 </script>
     <script type="module" src="./index.tsx"></script>
-    <script>
-      window.onerror = function(msg, url, lineNo, columnNo, error) {
-        console.error('Portfolio Runtime Error: ', msg, url, lineNo, columnNo, error);
-        return false;
-      };
-    </script>
   </head>
   <body>
     <div id="root"></div>
