--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         scroll-margin-top: 100px;
       }
       @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(20px); }
+        from { opacity: 0; transform: translateY(30px); }
         to { opacity: 1; transform: translateY(0); }
       }
       .animate-fadeIn {
-        animation: fadeIn 0.8s ease-out forwards;
+        animation: fadeIn 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
       }
       @keyframes scaleUp {
         from { opacity: 0; transform: scale(0.95); }
@@ -78,6 +78,22 @@
         line-height: 1;
         font-weight: 900;
       }
+      
+      /* Scroll Reveal Classes */
+      .reveal-hidden {
+        opacity: 0;
+        transform: translateY(40px);
+        transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
+      }
+      .reveal-visible {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      .stagger-item {
+        opacity: 0;
+        animation: fadeIn 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+
       #root:empty::before {
         content: 'RAUNAK';
         display: flex;
